--- a/vp/about.html
+++ b/vp/about.html
@@ -12,7 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
     <!-- <!-- <link rel="stylesheet" type="text/css" href="css/util.css"> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+    <link rel="stylesheet" type="text/css" href="test.css">
+    
     <script>
         function showMoreDetailsForVapeTracking() {
             if (document.getElementById("showMoreDetailsForVapeTracking").innerHTML == "") {
