--- a/vp/about.html
+++ b/vp/about.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-    <!-- <!-- <link rel="stylesheet" type="text/css" href="css/util.css"> -->
-    <!--<link rel="stylesheet" type="text/css" href="style.css">-->
     <link rel="stylesheet" type="text/css" href="test.css">
-    
+
     <script>
+        //This function shows more details for vape tracking 
         function showMoreDetailsForVapeTracking() {
             if (document.getElementById("showMoreDetailsForVapeTracking").innerHTML == "") {
 
@@ -27,6 +26,7 @@
 
         }
 
+        //This function shows more details for vape global forum
         function showMoreDetailsForVapeGlobalForum() {
             if (document.getElementById("showMoreDetailsForVapeGlobalForum").innerHTML == "") {
 
@@ -38,6 +38,7 @@
 
         }
 
+        //This function shows more details for vape global forum
         function showMoreDetailsForVapeJournal() {
             if (document.getElementById("showMoreDetailsForVapeJournal").innerHTML == "") {
 
@@ -59,6 +60,7 @@
             <img id="logo" src="assets/vapefree_logo.png" alt="logo">
         </div>
 
+        <!---Navigation bar -->
         <nav class="glassmorphic-nav ">
             <ul class="navbar container">
                 <li><a class="btn btn-outline-primary" href="index.php">Login</a></li>
@@ -67,6 +69,7 @@
             </ul>
         </nav>
 
+        <!---About Us Body -->
         <div id="about-block" class="glassmorphic">
             <div class="container">
                 <h1 class="h3 text-center login-signup-title">ABOUT US</h1>
@@ -74,12 +77,14 @@
                 <span>An Application that allows the user to keep track and give them feedback on their vape usage.</span>
             </div>
 
+            <!---Tracking info -->
             <div class="container qna">
                 <h3> How do we keep track of vape usage?</h3>
                 <span>(1) VapeFree will request the user to input the beginning and end date of a nicotine pod.<br/><br/></span>
                 <span>(2) The time lapse would be an index of their vaping usage.</span>
             </div>
 
+            <!---Feedback info -->
             <div class="container qna">
                 <h3> How do we provide feedback for vape usage?</h3>
 
